samples/_failures_safe/1761474487_eb1e21_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_c234dd37.c: In function ‘print_state’:
./samples/SAFE/__tmp_c234dd37.c:157:5: error: expected declaration or statement at end of input
  157 |     };
      |     ^
